# youtube-video-transcripts-etl

./: .gitignore  LICENSE  Makefile  README.md  config.yaml  data.dvc  pyproject.toml
.dvc/: config
.github/workflows/: etl_pipeline.yaml
notebooks/: youtube-video-transcripts-etl.ipynb
src/: config.py  etl.py  logger.py  process.py  utils.py
