[project]
name = "src"
version = "0.1.0"
description = ""
authors = [{ name = "ncheymbamalu", email = "nchey.learnings@gmail.com" }]
requires-python = "==3.10.14"
readme = "README.md"
dependencies = [
    "ipykernel>=6.29.5,<7",
    "joblib>=1.4.2",
    "jupyter>=1.0.0,<2",
    "loguru>=0.7.2,<0.8",
    "notebook>=7.3.2",
    "numpy>=2.2.3",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "polars>=1.23.0",
    "pyarrow>=19.0.1",
    "python-dotenv>=1.0.1,<2",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "youtube-transcript-api>=0.6.3",
]

[dependency-groups]
dev = [
    "isort>=6.0.0",
    "pylint>=3.3.4",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
indent = 4
lines_between_types = 1
known_first_party = ["src"]
default_section = "THIRDPARTY"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
